Update to week 8 tutorial

--- a/tutorials/tutorialS2_8.ipynb
+++ b/tutorials/tutorialS2_8.ipynb
@@ -95,10 +95,11 @@
     "\n",
     "2. Write the differential equations obtained above in matrix form for the case of 3 tanks and for the case of 5 tanks.\n",
     "\n",
-    "3. Consider the case where $\\dot{V}_{R,{\\rm in}}=\\dot{V}_{L,{\\rm in}}=\\dot{V}_{R,{\\rm out}}=\\dot{V}_{L,{\\rm out}}=0.1\\,{\\rm m^3\\,s^{-1}}$, $\\dot{v}_R=\\dot{v}_L=0.1\\,{\\rm m^3\\,s^{-1}}$, $T_{R,{\\rm in}}=80^\\circ{\\rm C}$, and $T_{L,{\\rm in}}=10^\\circ{\\rm C}$.  In the case of 5 tanks, determine the eigenvalues and corresponding eigenvectors of the matrix that appears in the energy balance.  If the initial temperature of the water in all of the tanks is $60^\\circ{\\rm C}$, what is the temperature in each tank at steady state?  Note that the matrix is singular. What does this mean in terms of the steady state solution?\n",
-    "4. Consider the case where $\\dot{V}_{R,{\\rm in}}=\\dot{V}_{L,{\\rm in}}=\\dot{V}_{R,{\\rm out}}=\\dot{V}_{L,{\\rm out}}=0$ and $\\dot{v}_R=\\dot{v}_L=0.1\\,{\\rm m^3\\,s^{-1}}$.  In the case of 5 tanks, determine the eigenvalues and corresponding eigenvectors of the matrix that appears in the energy balance.  If the initial temperature of tank 3 is $80^\\circ{\\rm C}$ and the initial temperature of the other tanks is $10^\\circ{\\rm C}$, determine the steady state temperatures of each of the tanks.   \n",
+    "3. Consider the case where $\\dot{V}_{R,{\\rm in}}=\\dot{V}_{L,{\\rm in}}=\\dot{V}_{R,{\\rm out}}=\\dot{V}_{L,{\\rm out}}=0$ and $\\dot{v}_R=\\dot{v}_L=0.1\\,{\\rm m^3\\,s^{-1}}$.  In the case of 5 tanks, determine the eigenvalues and corresponding eigenvectors of the matrix that appears in the energy balance.  If the initial temperature of tank 3 is $80^\\circ{\\rm C}$ and the initial temperature of the other tanks is $10^\\circ{\\rm C}$, determine the steady state temperatures of each of the tanks.   Note that the matrix is singular.  What does this mean in terms of the steady state solution?  Hint: Think about the case where the initial temperature of the tanks are changed.\n",
     "\n",
-    "5. Consider the case where $\\dot{V}_{R,{\\rm in}}=\\dot{V}_{R,{\\rm out}}=0.1\\,{\\rm m^3\\,s^{-1}}$, $\\dot{V}_{L,{\\rm in}}=\\dot{V}_{L,{\\rm out}}=0$, $\\dot{v}_R=0.2\\,{\\rm m^3\\,s^{-1}}$, and $\\dot{v}_L=0.1\\,{\\rm m^3\\,s^{-1}}$.  In the case of 5 tanks, determine the eigenvalues and corresponding eigenvectors of the matrix that appears in the energy balance.  If the initial temperature of tank 3 is $80^\\circ{\\rm C}$ and the initial temperature of the other tanks is $10^\\circ{\\rm C}$, determine the steady state temperatures of each of the tanks.   \n",
+    "4. Consider the case where $\\dot{V}_{R,{\\rm in}}=\\dot{V}_{R,{\\rm out}}=0.1\\,{\\rm m^3\\,s^{-1}}$, $\\dot{V}_{L,{\\rm in}}=\\dot{V}_{L,{\\rm out}}=0$, $\\dot{v}_R=0.2\\,{\\rm m^3\\,s^{-1}}$, and $\\dot{v}_L=0.1\\,{\\rm m^3\\,s^{-1}}$.  In the case of 5 tanks, determine the eigenvalues and corresponding eigenvectors of the matrix that appears in the energy balance.  If the initial temperature of tank 3 is $80^\\circ{\\rm C}$ and the initial temperature of the other tanks is $10^\\circ{\\rm C}$, determine the steady state temperatures of each of the tanks.\n",
+    "\n",
+    "5. Consider the case where $\\dot{V}_{R,{\\rm in}}=\\dot{V}_{L,{\\rm in}}=\\dot{V}_{R,{\\rm out}}=\\dot{V}_{L,{\\rm out}}=0.1\\,{\\rm m^3\\,s^{-1}}$, $\\dot{v}_R=\\dot{v}_L=0.1\\,{\\rm m^3\\,s^{-1}}$, $T_{R,{\\rm in}}=80^\\circ{\\rm C}$, and $T_{L,{\\rm in}}=10^\\circ{\\rm C}$.  In the case of 5 tanks, determine the eigenvalues and corresponding eigenvectors of the matrix that appears in the energy balance.  If the initial temperature of the water in all of the tanks is $60^\\circ{\\rm C}$, what is the temperature in each tank at steady state?  This involves thinking about the problem in terms of its eigenvector components...\n",
     "\n",
     "\n",
     "\n"
@@ -128,13 +129,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.2 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -146,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2-final"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
