--- a/tutorials/tutorialS2_8.ipynb
+++ b/tutorials/tutorialS2_8.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CP213: Model Solutions for S2 Tutorial 8\n",
+    "# CP213: Tutorial Notebook S2 Tutorial 8\n",
     "## Question 1\n",
     "To meet regulations, biodiesel must contain less than $1\\%$ impurity by weight. Pure water is used to extract these impurities in a continuous liquid-liquid extraction column. The basic flow diagram is provided with weight percentage composition of each stream.\n",
     "\n",
