--- a/tutorials/tutorialS2_8.ipynb
+++ b/tutorials/tutorialS2_8.ipynb
@@ -85,7 +85,7 @@
     "<img src=\"tank-series.png\" width=\"800\">\n",
     "\n",
     "For the questions below, you can consider that the flows are such that\n",
-    "the liquid volume in each of the tanks remains constant.  Assume that water has a density $\\rho=1000\\,{\\rm kg m^{-3}}$ and heat capacity\n",
+    "the liquid volume in each of the tanks remains constant.  Assume that water has a density $\\rho=1000\\,{\\rm kg\\, m^{-3}}$ and heat capacity\n",
     "$C=4.2\\,{\\rm kJ\\,kg}^{-1}$.\n",
     "\n",
     "1. Perform a differential energy balance around the first tank\n",
@@ -93,7 +93,11 @@
     "   tank tank $k$, where $1<k<N$, to develop the differential equations\n",
     "   that govern the temperature of the water in each of the tanks.\n",
     "\n",
-    "2. Write the differential equations obtained above in matrix form for the case of 3 tanks and for the case of 5 tanks.\n",
+    "2. Write the differential equations obtained above in matrix form for the case of 3 tanks and for the case of 5 tanks.  That is:\n",
+    "\\begin{align*}\n",
+    "\\frac{d}{dt} \\vec{T} &= {\\bf A}\\cdot\\vec{T} + \\vec{b}\n",
+    "\\end{align*}\n",
+    "where $\\vec{T}$ is the vector of $N$ temperatures, ${\\bf A}$ is an $N\\times N$ matrix, and $\\vec{b}$ is an $N$ dimensional vector of \"constants\".\n",
     "\n",
     "3. Consider the case where $\\dot{V}_{R,{\\rm in}}=\\dot{V}_{L,{\\rm in}}=\\dot{V}_{R,{\\rm out}}=\\dot{V}_{L,{\\rm out}}=0$ and $\\dot{v}_R=\\dot{v}_L=0.1\\,{\\rm m^3\\,s^{-1}}$.  In the case of 5 tanks, determine the eigenvalues and corresponding eigenvectors of the matrix that appears in the energy balance.  If the initial temperature of tank 3 is $80^\\circ{\\rm C}$ and the initial temperature of the other tanks is $10^\\circ{\\rm C}$, determine the steady state temperatures of each of the tanks.   Note that the matrix is singular.  What does this mean in terms of the steady state solution?  Hint: Think about the case where the initial temperature of the tanks are changed.\n",
     "\n",
