concentration to mass

--- a/tutorials/tutorialS2_9.ipynb
+++ b/tutorials/tutorialS2_9.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "<img src=\"tank-recycle.png\" width=\"300\">\n",
     "\n",
-    "The first tank is charged with $40 \\ \\rm{L}$ water and $5\\ \\rm{kg}$ salt and the second with $20\\ \\rm{L}$ water and $4\\ \\rm{kg}$ salt. The flowrates into each of the tanks from the other are equivelant at $10\\ \\rm{L\\ min^{-1}}$. Let $x_1$ and $x_2$ be the concentrations of salt in tanks 1 and 2, respectively, at anytime $t$.  \n",
+    "The first tank is charged with $40 \\ \\rm{L}$ water and $5\\ \\rm{kg}$ salt and the second with $20\\ \\rm{L}$ water and $4\\ \\rm{kg}$ salt. The flowrates into each of the tanks from the other are equivelant at $10\\ \\rm{L\\ min^{-1}}$. Let $x_1$ and $x_2$ be the mass of salt in tanks 1 and 2, respectively, at anytime $t$.  \n",
     "\n",
     "Solve the system of differential equations and plot the concentration of the tanks with time. If you are uncomfortable with working on python to plot, you can make use of other software that you prefer (e.g. Excel, Matlab etc.). What happens to the mass of salt in each tank as the system approaches equillibrium?"
    ],
