--- a/tutorials/tutorialS2_7-soln.ipynb
+++ b/tutorials/tutorialS2_7-soln.ipynb
@@ -674,7 +674,7 @@
     "\n",
     "<img src=\"tank-recycle.png\" width=\"300\">\n",
     "\n",
-    "The first tank is charged with $40 \\ \\rm{L}$ water and $5\\ \\rm{kg}$ salt and the second with $20\\ \\rm{L}$ water and $4\\ \\rm{kg}$ salt. The flowrates into each of the tanks from the other are equivelant at $10\\ \\rm{L\\ min^{-1}}$. Let $x_1$ and $x_2$ be the concentrations of salt in tanks 1 and 2, respectively, at anytime $t$.  \n",
+    "The first tank is charged with $40 \\ \\rm{L}$ water and $5\\ \\rm{kg}$ salt and the second with $20\\ \\rm{L}$ water and $4\\ \\rm{kg}$ salt. The flowrates into each of the tanks from the other are equivelant at $10\\ \\rm{L\\ min^{-1}}$. Let $x_1$ and $x_2$ be the mass of salt in tanks 1 and 2, respectively, at anytime $t$.  \n",
     "\n",
     "By performing differential balances on the tanks show that the resulting differential equations can be written in matrix form as\n",
     "\n",
