updating fipy test

--- a/notebooks/test_fipy.ipynb
+++ b/notebooks/test_fipy.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "56b93636",
+   "metadata": {},
+   "source": [
+    "# Test of FiPy\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "def66996",
+   "execution_count": null,
+   "id": "220f5549",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "19018696",
+   "id": "789b3694",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67712b77",
+   "id": "046eb3eb",
    "metadata": {},
    "outputs": [],
    "source": []
