adding link to FiPy

--- a/notebooks/test_fipy.ipynb
+++ b/notebooks/test_fipy.ipynb
@@ -5,7 +5,10 @@
    "id": "b9507bbd",
    "metadata": {},
    "source": [
-    "# Test of FiPy"
+    "# Test of FiPy\n",
+    "\n",
+    "[FiPy](https://www.ctcms.nist.gov/fipy/index.html)\n",
+    "is an open source software package written in Python that solves partial differential equaitons using the finite volume method.\n"
    ]
   },
   {
